<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="action"
            type="Integer" />

        <variable
            name="user"
            type="com.ipleiria.estg.meicm.arcismarthome.models.User" />

        <variable
            name="checkBoxPw"
            type="Boolean" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/view_add_edit_account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <TextView
                    android:id="@+id/tv_title_account"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="45dp"
                    android:text="@{action == 2 ? @string/edit_account : @string/create_account}"
                    android:textAlignment="center"
                    android:textColor="@color/themeColor"
                    android:textSize="32sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.511"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="@string/edit_account" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/cl_profile_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="50dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_title_account">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/civ_profile_image"
                        android:layout_width="96dp"
                        android:layout_height="96dp"
                        android:src="@drawable/ic_profile_solid"
                        app:civ_border_color="@color/themeColor"
                        app:civ_border_width="1dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageView
                        android:id="@+id/iv_remove_photo"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_marginEnd="75dp"
                        android:layout_marginBottom="80dp"
                        android:contentDescription="@string/desc_profile_image"
                        android:visibility="@{user.photo == null ? View.GONE : View.VISIBLE}"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:srcCompat="@drawable/ic_clear_solid_24dp"
                        tools:visibility="visible" />

                    <ImageView
                        android:id="@+id/iv_change_photo"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_marginStart="70dp"
                        android:layout_marginTop="72dp"
                        android:adjustViewBounds="true"
                        android:contentDescription="@string/desc_photo_icon"
                        android:scaleType="fitCenter"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/ic_photo_solid_24" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/constraintLayout9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="35dp"
                    app:layout_constraintEnd_toEndOf="@+id/cl_profile_image"
                    app:layout_constraintStart_toStartOf="@+id/cl_profile_image"
                    app:layout_constraintTop_toBottomOf="@+id/cl_profile_image">

                    <EditText
                        android:id="@+id/et_username"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:autofillHints=""
                        android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
                        android:ems="10"
                        android:hint="@string/username"
                        android:imeOptions="actionNext"
                        android:inputType="textShortMessage|text"
                        android:text="@{action == 2 ? user.username : ``}"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.424"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <EditText
                        android:id="@+id/et_email"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:autofillHints=""
                        android:ems="10"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress"
                        android:text="@{action == 2 ? user.email : ``}"
                        app:layout_constraintEnd_toEndOf="@+id/et_last_name"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/et_username" />

                    <EditText
                        android:id="@+id/et_first_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:autofillHints=""
                        android:digits="abcdefghijklmnopqrstuvwxyzáàãâäéèêëíìîïóòõôöúùûüABCDEFGHIJKLMNOPQRSTUVWXYZÁÀÃÂÄÉÈÊËÍÌÎÏÓÒÕÔÖÚÙÛÜ"
                        android:ems="10"
                        android:hint="@string/first_name"
                        android:inputType="text"
                        android:text="@{action == 2 ? user.firstName : ``}"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/et_email" />

                    <EditText
                        android:id="@+id/et_last_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:autofillHints=""
                        android:digits="abcdefghijklmnopqrstuvwxyzáàãâäéèêëíìîïóòõôöúùûüABCDEFGHIJKLMNOPQRSTUVWXYZÁÀÃÂÄÉÈÊËÍÌÎÏÓÒÕÔÖÚÙÛÜ"
                        android:ems="10"
                        android:hint="@string/last_name"
                        android:inputType="text"
                        android:text="@{action == 2 ? user.lastName : ``}"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/et_first_name" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <CheckBox
                    android:id="@+id/changePassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="100dp"
                    android:text="@string/update_password"
                    android:visibility="@{action == 2 ? View.VISIBLE : View.GONE}"
                    app:layout_constraintBottom_toTopOf="@+id/view"
                    app:layout_constraintEnd_toEndOf="@+id/constraintLayout9"
                    app:layout_constraintTop_toBottomOf="@+id/constraintLayout9" />

                <View
                    android:id="@+id/view"
                    android:layout_width="0dp"
                    android:layout_height="2dp"
                    android:layout_marginStart="50dp"
                    android:layout_marginTop="70dp"
                    android:layout_marginEnd="50dp"
                    android:background="@color/lightGray"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/constraintLayout9" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/constraintLayout10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:layout_marginBottom="40dp"
                    app:layout_constraintBottom_toTopOf="@+id/btn_create_save_account"
                    app:layout_constraintEnd_toEndOf="@+id/view"
                    app:layout_constraintStart_toStartOf="@+id/view"
                    app:layout_constraintTop_toBottomOf="@+id/view">

                    <EditText
                        android:id="@+id/et_old_password"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="16dp"
                        android:autofillHints=""
                        android:ems="10"
                        android:hint="@string/old_password"
                        android:inputType="textPassword"
                        android:visibility="@{checkBoxPw == true ? View.VISIBLE : View.GONE}"
                        app:layout_constraintBottom_toTopOf="@+id/et_password"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <EditText
                        android:id="@+id/et_password"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="16dp"
                        android:autofillHints=""
                        android:ems="10"
                        android:hint="@string/password"
                        android:visibility="@{checkBoxPw == true || action==0 || action == 1 ? View.VISIBLE : View.GONE}"
                        android:inputType="textPassword"
                        app:layout_constraintBottom_toTopOf="@+id/et_password_confirmation"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent" />

                    <EditText
                        android:id="@+id/et_password_confirmation"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:autofillHints=""
                        android:ems="10"
                        android:hint="@string/password_confirmation"
                        android:visibility="@{checkBoxPw == true || action==0 || action == 1 ? View.VISIBLE : View.GONE}"
                        android:inputType="textPassword"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <Button
                    android:id="@+id/btn_create_save_account"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="60dp"
                    android:background="@color/transparent"
                    android:text="@{action == 2 ? @string/save : @string/create}"
                    android:textAlignment="center"
                    android:textAllCaps="true"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textColor="@color/ARCIBlue"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/constraintLayout10"
                    app:layout_constraintStart_toStartOf="@+id/constraintLayout10"
                    tools:text="@string/create" />

            </androidx.constraintlayout.widget.ConstraintLayout>


        </ScrollView>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
