    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/constraint_screen"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".SplashScreenActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraint_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="100dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:contentDescription="@string/desc_logo"
                app:layout_constraintBottom_toTopOf="@+id/app_long_name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:srcCompat="@drawable/logo_name_light_mode" />

            <TextView
                android:id="@+id/app_long_name"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:fontFamily="monospace"
                android:text="@string/app_long_name"
                android:textAlignment="center"
                android:textColor="@color/themeColor"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/logo"
                app:layout_constraintStart_toStartOf="@+id/logo" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/app_slogan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:fontFamily="cursive"
            android:text="@string/app_slogan"
            android:textColor="@color/themeColor"
            android:textSize="22sp"
            android:textStyle="bold|italic"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraint_name"
            app:layout_constraintVertical_bias="0.8" />

    </androidx.constraintlayout.widget.ConstraintLayout>
